<resources>
    <string name="app_name">TestApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_error">Unknow error. Please check your Internet connection!</string>
    <string name="labelMetascore">Metascore</string>
    <string name="label_your_rating">Rate This</string>
    <string name="label_director">Director:</string>
    <string name="label_actors">Actors:</string>
    <string name="label_awards">Awards:</string>
    <string name="label_language">Language:</string>
    <string name="label_summery">Summery</string>
</resources>
