<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movieDetail"
            type="com.example.test.app.data.model.MovieDetail" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{movieDetail.poster}"
                    app:layout_collapseMode="parallax" />

                <!--                <androidx.appcompat.widget.Toolbar-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="?attr/actionBarSize"-->
                <!--                    app:layout_collapseMode="pin"-->
                <!--                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/AppTheme.TextAppearance.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{movieDetail.title}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/llMovieDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle">

                    <TextView
                        android:id="@+id/tvYear"
                        style="@style/AppTheme.TextAppearance.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{movieDetail.year}" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#777" />

                    <TextView
                        android:id="@+id/tvRuntime"
                        style="@style/AppTheme.TextAppearance.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{movieDetail.runtime}" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#777" />

                    <TextView
                        android:id="@+id/tvType"
                        style="@style/AppTheme.TextAppearance.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{movieDetail.type}" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvGenre"
                    style="@style/AppTheme.TextAppearance.Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@{movieDetail.genre}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/llMovieDesc" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGenre">

                    <TextView
                        android:id="@+id/tvMetaScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="serif-monospace"
                        android:text="@{movieDetail.metascore}"
                        android:textColor="#71C07F"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="@id/tvMetaScoreLabel"
                        app:layout_constraintRight_toRightOf="@id/tvMetaScoreLabel"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvMetaScoreLabel"
                        style="@style/AppTheme.TextAppearance.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/labelMetascore"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent" />

                    <ImageView
                        android:id="@+id/ivImdbRating"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_star"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvImdbRating"
                        style="@style/AppTheme.TextAppearance.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{movieDetail.imdbRating + ` / 10`}"
                        app:layout_constraintLeft_toLeftOf="@id/ivImdbRating"
                        app:layout_constraintRight_toRightOf="@id/ivImdbRating"
                        app:layout_constraintTop_toBottomOf="@id/ivImdbRating" />

                    <ImageView
                        android:id="@+id/ivYourRating"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_star_border"
                        app:layout_constraintLeft_toLeftOf="@id/tvYourRating"
                        app:layout_constraintRight_toRightOf="@id/tvYourRating"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvYourRating"
                        style="@style/AppTheme.TextAppearance.Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/label_your_rating"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivYourRating" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvDirectorLabel"
                    style="@style/AppTheme.TextAppearance.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/label_director"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clScore" />

                <TextView
                    android:id="@+id/tvDirector"
                    style="@style/AppTheme.TextAppearance.Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="start"
                    android:text="@{movieDetail.director}"
                    app:layout_constraintLeft_toRightOf="@id/tvDirectorLabel"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvDirectorLabel" />

                <TextView
                    android:id="@+id/tvActorsLabel"
                    style="@style/AppTheme.TextAppearance.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_actors"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDirectorLabel" />

                <TextView
                    android:id="@+id/tvActors"
                    style="@style/AppTheme.TextAppearance.Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@{movieDetail.actors}"
                    app:layout_constraintLeft_toRightOf="@id/tvActorsLabel"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvActorsLabel" />

                <TextView
                    android:id="@+id/tvAwardsLabel"
                    style="@style/AppTheme.TextAppearance.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_awards"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvActors" />

                <TextView
                    android:id="@+id/tvAwards"
                    style="@style/AppTheme.TextAppearance.Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@{movieDetail.awards}"
                    app:layout_constraintLeft_toRightOf="@id/tvAwardsLabel"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvAwardsLabel" />


                <TextView
                    android:id="@+id/tvLanguageLabel"
                    style="@style/AppTheme.TextAppearance.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/label_language"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAwards" />

                <TextView
                    android:id="@+id/tvLanguage"
                    style="@style/AppTheme.TextAppearance.Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@{movieDetail.language}"
                    app:layout_constraintLeft_toRightOf="@id/tvLanguageLabel"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvLanguageLabel" />

                <TextView
                    android:id="@+id/tvSummeryLabel"
                    style="@style/AppTheme.TextAppearance.Subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/label_summery"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLanguageLabel" />

                <TextView
                    android:id="@+id/tvSummery"
                    style="@style/AppTheme.TextAppearance.Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{movieDetail.plot}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSummeryLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.test.app.view.customview.CustomLoadingView
                android:id="@+id/customLoading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".4"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".15" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>